Fix spacing

--- a/src/static/blog/post.css
+++ b/src/static/blog/post.css
@@ -12,13 +12,4 @@ figcaption {
 
     font-style: italic;
     font-size: 14px;
-    margin-bottom: 1em;
-}
-
-img {
-    margin: -1em 0;
-}
-
-thead {
-    margin-bottom: 1em;
 }
